vlib/v/checker/tests/comptime_value/parser_errors_1.run.out
vlib/v/checker/tests/comptime_value/parser_errors_1.vv:1:16: error: -d values can only be pure literals
    1 | const my_f32 = $d('my_f32', f32(42.0))
      |                ~~~~~~~~~~~~~~~~~~~~~~~
